--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/fonts/webfont/fonts.css">
     <link rel="stylesheet" type="text/css" href="assets/fonts/icons/fe/fe.css">
@@ -130,7 +130,7 @@
                                 <img src="assets/images/playlist/8.jpg" alt="" style="width:200px; height: 160px;" class="ui-rounded">
                             </div>
                             <h4 class="font-poppinsregular mrgt1">Create a Profile NOW</h4>
-                            <p class="font-poppinslight fs--20">Lorem ipsum dolor sit amet, consectetur adipi-scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. </p>
+                            <p class="font-poppinslight fs--14">Lorem ipsum dolor sit amet, consectetur adipi-scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. </p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -139,7 +139,7 @@
                                 <img src="assets/images/playlist/5.jpg" alt="" style="width:200px; height: 160px;" class="ui-rounded">
                             </div> 
                             <h4 class="font-poppinsregular mrgt1">Choose a career</h4>
-                            <p>Donec in sodales dui, a blandit nunc. Pellen-tesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, portti-tor vitae efficitur non. </p>
+                            <p class="font-poppinslight fs--14">Donec in sodales dui, a blandit nunc. Pellen-tesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, portti-tor vitae efficitur non. </p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -148,7 +148,7 @@
                                 <img src="assets/images/playlist/4.jpg" alt="" style="width:200px; height: 160px;" class="ui-rounded">
                             </div>
                             <h4  class="font-poppinsregular mrgt1">Enjoy the platform</h4>
-                            <p>Ablandit nunc. Pellentesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur non, ultric-ies volutpat tellus. </p>
+                            <p class="font-poppinslight fs--14">Ablandit nunc. Pellentesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur non, ultric-ies volutpat tellus. </p>
                         </div>
                     </div>
                 </div>
