--- a/Tnews.html
+++ b/Tnews.html
@@ -79,9 +79,9 @@
 <section class="news">
 		<div class="container">
 		   <div class="row">
-         <div class="col-sm-6 lg-3">
+         <div class="col-sm-6  lg-3">
           <div class="news mrgb1">
-            <img src="assets/images/newnews/1.jpg"  class=" mrgt2 "style="width: 400px; height: 270px;"alt="">
+            <img src="assets/images/newnews/1.jpg"  class="  imge mrgt2 "style="width: 800px; height: 350px;"alt="">
             <h5 class="font-poppinslight on-red fs--12 mrgt1"><b>May 19, 2020</b></h5>
             <h3 class="font-poppinsregular on-black mrgt1"><b>TIIM GODFREY RELEASES A NEW SONG</b></h3>
             <div class="font-poppinslight fs--13  on-grey">by <a href=""  class="font-poppinslight fs--13 on-grey">Okiri Gabriel</a> in <a href=""  class="font-poppinslight fs--13 on-grey">Music Publicity</a></div>
@@ -89,7 +89,7 @@
           </div>
           
           <div class="news mrgb1 ">
-            <img src="assets/images/newnews/2.jpg" style="width: 400px; height: 270px;"  class="mrgt2" alt="">
+            <img src="assets/images/newnews/2.jpg" style="width: 800px; height: 350px;  "class=" imge mrgt2" alt="">
             <h5 class="font-poppinslight on-red fs--12 mrgt1"><b>May 19, 2020</b></h5>
             <h3  class="font-poppinsregular mrgt1 on-black"><b>50cent releases his new book</b></h3>
             <div class="font-poppinslight fs--13 on-grey">by <a href=""  class="font-poppinslight fs--13 on-grey"> Okiri Gabriel</a> in <a href=""  class="font-poppinslight fs--13 on-grey">Music</a></div>
@@ -97,7 +97,7 @@
           </div>
         
           <div class="news mrgb1 mrgt1">
-            <img src="assets/images/newnews/3.jpg" style="width: 400px; height: 270px;" class="mrgt2 "alt="">
+            <img src="assets/images/newnews/3.jpg" style="width: 800px; height: 350px;" class=" imge mrgt2 "alt="">
             <h5 class="font-poppinslight on-red fs--12 mrgt1"><b>May 19, 2020</b></h5>
             <h3  class="font-poppinsregular mrgt1 on-black"><b>Asa suspends Lucid tour due to covid19</b></h3>
             <div class="font-poppinslight fs--13 on-grey">by <a href="" class="font-poppinslight fs--13 on-grey">Okiri Gabriel</a> in <a href=""  class="font-poppinslight fs--13 on-grey">Music</a></div>
