--- a/Home.html
+++ b/Home.html
@@ -106,12 +106,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="section-title">
+                        <div class="section-titles">
                             <h2 class="font-poppinssemibold fs--50 mrgt1">How important is music</h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <p class="font-poppinslight fs--18 mrgt2 on-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                        <p class="sect-t font-poppinslight fs--18 mrgt2 on-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                         <a href="#" class="t-btn mrgb1 ">Try it now</a>
                     </div>
                 </div>
@@ -120,14 +120,14 @@
       
         <section class=" pdt3 pdb2 bg-black"  style="background-image: url('assets/images/how-to.jpg');">
             <div class="container text-white">
-                <div class="section-title">
+                <div class="sect">
                     <h2 class="font-poppinsregular">How TMC works</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="icon">
                             <div class="">
-                                <img src="assets/images/playlist/8.jpg" alt="" style="width:200px; height: 160px;" class="ui-rounded">
+                                <img src="assets/images/playlist/8.jpg" alt="" style="width:200px; height: 160px;" class=" iimg ui-rounded">
                             </div>
                             <h4 class="font-poppinsregular mrgt1">Create a Profile NOW</h4>
                             <p class="font-poppinslight fs--14">Lorem ipsum dolor sit amet, consectetur adipi-scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. </p>
@@ -138,7 +138,7 @@
                             <div class="">
                                 <img src="assets/images/playlist/5.jpg" alt="" style="width:200px; height: 160px;" class="ui-rounded">
                             </div> 
-                            <h4 class="font-poppinsregular mrgt1">Choose a career</h4>
+                            <h4 class=" section-titles font-poppinsregular mrgt1">Choose a career</h4>
                             <p class="font-poppinslight fs--14">Donec in sodales dui, a blandit nunc. Pellen-tesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, portti-tor vitae efficitur non. </p>
                         </div>
                     </div>
@@ -159,8 +159,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="section-title">
-                            <h2 class="font-poppinsregular fs--50">Our Concept</h2>
+                        <div class="section-titles">
+                            <h2 class=" font-poppinsregular fs--50">Our Concept</h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <ul class="ui--a on-white mrgl5 mrgt3  bg-dark  pdt2 pdb2 ui-rounded-small mrgb1">
+                        <ul class="car ui--a on-white mrgl5 mrgt3  bg-dark  pdt2 pdb2 ui-rounded-small mrgb1">
                             <li><img src="assets/images/icons/check-icon.png"  class=" pdr1 on-white" alt="">Music Production</li><br>
                             <li><img src="assets/images/icons/check-icon.png"  class=" pdr1 on-white"alt="">Music Eductaion</li><br>
                             <li><img src="assets/images/icons/check-icon.png"   class=" pdr1 on-white"alt="">Sound Technology</li><br>
@@ -225,7 +225,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="section-title mrtg2">
+                        <div class="section-titles mrtg2">
                             <h2 class="font-poppinsregular mrgt1 on-black">Why choose a career</h2>
                         </div>
                     </div>
