--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
 
-    <title>The music | Connect!</title>
+    <title>The music Connect | Home!</title>
 
 
   </head>
