--- a/play.html
+++ b/play.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <!-- Bootstrap CSS -->
-    <title>Hello, world!</title>
+    <title>The music Connect |Playlist!</title>>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/fonts/webfont/fonts.css">
