--- a/Tnews.html
+++ b/Tnews.html
@@ -20,7 +20,7 @@
   <body class="">
 
 
-      <header class="container-fluid bg-cstcolor">
+      <header class="container-fluid  fixed-top bg-black">
           <div class="row">
          <div class="col-6 lg-4 sm-2">
          <div class="container">
@@ -117,7 +117,7 @@
 
 
 <!-- Footer  -->
-<footer class="bg-purplee pdt5 pdb5">
+<footer class="bg-black pdt5 pdb5">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-6 col-lg-7 order-lg-2">
@@ -159,7 +159,7 @@
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="img/logo.png" alt="">
 					<div class="copyright">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | The Music <i class="fa fa-heart-o" aria-hidden="true"></i>  <a href="https://colorlib.com" target="_blank">Connect</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | The Music  <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
 						<a href=""><i class="fa fa-instagram"></i></a>
