--- a/play.html
+++ b/play.html
@@ -20,7 +20,7 @@
   <body class="">
 
 
-      <header class="container-fluid bg-cstcolor">
+      <header class="container-fluid bg-black">
           <div class="row">
          <div class="col-6 lg-4 sm-2">
          <div class="container">
