--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
   <body class="">
 
 
-      <header class="container-fluid bg-cstcolor">
+      <header class="container-fluid  fixed-top  bg-black">
           <div class="row">
          <div class="col-6 lg-4 sm-2">
          <div class="container">
@@ -179,7 +179,7 @@
     <!-- Playlist section end -->
   
     <!-- Help section end -->
-    <section class="help-section bg-brand--purpledark pdt3 ">
+    <section class="help-section bg-black pdt3 ">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -245,7 +245,7 @@
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="img/logo.png" alt="">
 					<div class="copyright">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | The Music <i class="fa fa-heart-o" aria-hidden="true"></i>  <a href="https://colorlib.com" target="_blank">Connect</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | The Music <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
 						<a href=""><i class="fa fa-instagram"></i></a>
