--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="assets/fonts/icons/eleganticons.css">
      <link rel="stylesheet" href="assets/fonts/icons/themify-icons.css" type="text/css">
 
-    <title>The musi connect | </title>
+    <title>The musi connect | Contact</title>
 
 
   </head>
@@ -111,7 +111,7 @@
                             <div class="col-md-12">
                                 <input type="text" placeholder="Subject">
                                 <textarea placeholder="Message"></textarea>
-                                <button class="site-btn">send message</button>
+                                <button class="primary-btn">Send message</button>
                             </div>
                         </div>
                     </form>
