--- a/About.html
+++ b/About.html
@@ -171,7 +171,7 @@
 								<h2 class="font-poppinslight  mrgl8 fs--15 on-white">Products</h2>
 								<ul class="ui--a inline-block font-poppinslight">
 									<li><a href=""  class="inline-block">Music</a></li><br>
-									<li><a href=""  class="inline-block">Careers</a></li><br>
+									<li><a href="careers.html"  class="inline-block">Careers</a></li><br>
 									<li><a href=""  class="inline-block">platform</a></li><br>
 									<li><a href=""  class="inline-block">Footage</a></li><br>
 								</ul>
@@ -181,10 +181,10 @@
 							<div class="footer">
 								<h2 class="font-poppinslight mrgl8 fs--15 on-white">Playlists</h2>
 								<ul class="ui--a font-poppinslight">
-									<li><a href="" class="inline-block">Newsletter</a></li><br>
-									<li><a href=""  class="inline-block">Careers</a></li><br>
+									<li><a href="Tnews.html" class="inline-block">News</a></li><br>
+									<li><a href="careers.html"  class="inline-block">Careers</a></li><br>
 									<li><a href=""  class="inline-block">Press</a></li><br>
-									<li><a href=""  class="inline-block">Contact</a></li><br>
+									<li><a href="contact.html"  class="inline-block">Contact</a></li><br>
 								</ul>
 							</div>
 						</div>
