--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
                       <a class="nav-link" href="Tnews.html">News</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Connect</a>
+                      <a class="nav-link" href="careers.html">Careers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="songs.html">Playlist</a>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="col-lg-6">
                         <p class="sect-t font-poppinslight fs--18 mrgt2 on-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                        <a href="#" class="t-btn mrgb1 ">Try it now</a>
+                        <a href="#" class="t-btn mrgb1 ">Read more</a>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                             <h2 class="font-poppinsregular  fs--40 mrgt1 on-white">Careers to Choose in Music</h2>
                             <h3 class="font-poppinsregular fs--35 on-white">Start NOW</h3>
                             <p class="font-poppinslight on-white fs--17"> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            <a href="#" class="t-btn mrgb2 ">Try it now</a>
+                            <a href="careers.html" class="t-btn mrgb2 ">Careers</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
