--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                       <a class="nav-link" href="Tnews.html">News</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Connect</a>
+                      <a class="nav-link" href="careers.html">Careers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="songs.html">Playlist</a>
@@ -144,7 +144,7 @@
                             <h2 class="font-poppinslight  mrgl8 fs--15 on-white">Products</h2>
                             <ul class="ui--a inline-block font-poppinslight">
                                 <li><a href=""  class="inline-block">Music</a></li><br>
-                                <li><a href=""  class="inline-block">Careers</a></li><br>
+                                <li><a href="careers.html"  class="inline-block">Careers</a></li><br>
                                 <li><a href=""  class="inline-block">platform</a></li><br>
                                 <li><a href=""  class="inline-block">Footage</a></li><br>
                             </ul>
@@ -154,10 +154,10 @@
                         <div class="footer">
                             <h2 class="font-poppinslight mrgl8 fs--15 on-white">Playlists</h2>
                             <ul class="ui--a font-poppinslight">
-                                <li><a href="" class="inline-block">Newsletter</a></li><br>
-                                <li><a href=""  class="inline-block">Careers</a></li><br>
+                                <li><a href="Tnews.html" class="inline-block">News</a></li><br>
+                                <li><a href="careers.html"  class="inline-block">Careers</a></li><br>
                                 <li><a href=""  class="inline-block">Press</a></li><br>
-                                <li><a href=""  class="inline-block">Contact</a></li><br>
+                                <li><a href="contact.html"  class="inline-block">Contact</a></li><br>
                             </ul>
                         </div>
                     </div>
