--- a/Home.html
+++ b/Home.html
@@ -88,13 +88,13 @@
 
 <div class="container-fluid bg-black FFW bg-height-full" style="background-image: url('assets/images/hero.jpg')">
 
-    <div class="ui-wrapper-large">
+    <div class="ui-wrapper-xsmall">
 
-            <div class="container ">
+            <div class="container pdb2">
 					<div class="row">
 						<div class="col-lg-9  ui-text-center mx-auto">
 							<div class="ui-text-center">
-								<h2 class="on-white heaad mrgt3 animate__animated animate__backInLeft animate__delay-2s fs--40 font-poppinssemibold"><span>Music</span> for everyone.</h2>
+								<h2 class="on-white heaad mrgt3 animate__animated animate__backInLeft animate__delay-2s fs--40 font-poppinssemibold"><span>Creating Good Music</span> </h2>
 								<p class="on-white animate__animated animate__backInLeft animate__delay-2s headd font-poppinsregular">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
 								<a href="#" class=" animate__animated animate__backInLeft animate__delay-2s t-btn">Connect Now</a>
 							</div>
@@ -116,7 +116,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-titles">
-                            <h2 class="font-poppinssemibold fs--40 mrgt1">How important is music</h2>
+                            <h2 class="font-poppinssemibold fs--40 mrgt1">What is Creating Good Music?</h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -130,7 +130,7 @@
         <section class=" pdt3 pdb2 soul"  style="background-image: url('assets/images/how-to.jpg');">
             <div class="container text-white">
                 <div class="sect">
-                    <h2 class="font-poppinsregular sect fs--40">How TMC works</h2>
+                    <h2 class="font-poppinsregular sect fs--40"></h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
@@ -138,7 +138,7 @@
                             <div class="">
                                 <img src="assets/images/playlist/8.jpg" alt="" style="width:200px; height: 160px;" class=" iimg ui-rounded">
                             </div>
-                            <h4 class="font-poppinsregular tobe mrgt1">Create a Profile NOW</h4>
+                            <h4 class="font-poppinsregular tobe mrgt1">Music News</h4>
                             <p class="font-poppinslight tope fs--14">Lorem ipsum dolor sit amet, consectetur adipi-scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. </p>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                             <div class="">
                                 <img src="assets/images/playlist/5.jpg" alt="" style="width:200px; height: 160px;" class=" iimg ui-rounded">
                             </div> 
-                            <h4 class=" section-titles font-poppinsregular tobe mrgt1">Choose a career</h4>
+                            <h4 class=" section-titles font-poppinsregular tobe mrgt1">Music Playlist</h4>
                             <p class="font-poppinslight tope fs--14">Donec in sodales dui, a blandit nunc. Pellen-tesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, portti-tor vitae efficitur non. </p>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                             <div class="">
                                 <img src="assets/images/playlist/4.jpg" alt="" style="width:200px; height: 160px;" class="iimg ui-rounded">
                             </div>
-                            <h4  class="font-poppinsregular tobe mrgt1">Enjoy the platform</h4>
+                            <h4  class="font-poppinsregular tobe mrgt1">Music Informations</h4>
                             <p class="font-poppinslight tope  fs--14">Ablandit nunc. Pellentesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur non, ultric-ies volutpat tellus. </p>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="ui-text-center pdt3">
                             <img src="assets/images/c33.jpg" alt="" style="width: 200px; height: 150px;">
-                            <h5 class="font0poppinslight ">All Genres of Music</h5>
+                            <h5 class="font0poppinslight ">Music Webinars</h5>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -198,7 +198,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="ui-text-center pdt3">
                             <img src="assets/images/ca.jpg" alt="" style="width: 200px; height: 150px;">
-                            <h5 class="font0poppinslight ">Careers in Music</h5>
+                            <h5 class="font0poppinslight ">Music Entertainment</h5>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="sub-text">
-                            <h2 class="font-poppinsregular  fs--40 mrgt1 on-white">Careers to Choose in Music</h2>
+                            <h2 class="font-poppinsregular  fs--40 mrgt1 on-white">Careers in Music</h2>
                             <h3 class="font-poppinsregular fs--35 on-white">Start NOW</h3>
                             <p class="font-poppinslight on-white fs--17"> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <a href="careers.html" class="t-btn mrgb2 ">Careers</a>
@@ -235,7 +235,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-titles mrtg2">
-                            <h2 class="font-poppinsregular mrgt1 on-black">Why choose a career</h2>
+                            <h2 class="font-poppinsregular mrgt1 on-black">Events</h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
