--- a/MusicEDU.html
+++ b/MusicEDU.html
@@ -123,7 +123,8 @@
 
 </div>
 
-
+<!-- Return to Top -->
+<a href="javascript:" id="return-to-top" class=" arrow"><img src="assets/images/Untitled-1.png" class="arrow" alt=""></a>
 <!-- Footer  -->
 <footer class="bg-black pdt5 pdb5">
 		<div class="container">
@@ -189,15 +190,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   
 
-    <script type="text/javascript" lang="javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.js.map"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.min.js.map"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.js.map"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.min.js.map"></script>
+    <script type="text/javascript" lang="javascript" src="assets/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" lang="javascript" src="assets/js/main.js"></script>
+  
     
 
     <script>
