--- a/songs.html
+++ b/songs.html
@@ -200,7 +200,8 @@
       </div>
     </section>
     <!-- Help section end -->
-  
+  <!-- Return to Top -->
+<a href="javascript:" id="return-to-top" class=" arrow"><img src="assets/images/Untitled-1.png" class="arrow" alt=""></a>
 
 <!-- Footer  -->
 <footer class="bg-purplee pdt5 pdb5">
@@ -265,16 +266,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   
+  
 
-    <script type="text/javascript" lang="javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.js.map"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.bundle.min.js.map"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.js.map"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" lang="javascript" src="js/bootstrap.min.js.map"></script>
+    <script type="text/javascript" lang="javascript" src="assets/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" lang="javascript" src="assets/js/main.js"></script>
+  
     
 
     <script>
