--- a/About.html
+++ b/About.html
@@ -42,10 +42,10 @@
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Tnews.html">News</a>
+                    <a class="nav-link" href="Tnews.html">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Connect</a>
+                    <a class="nav-link" href="careers.html">Careers</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="songs.html">Playlist</a>
