--- a/MusicEDU.html
+++ b/MusicEDU.html
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Tnews.html">News</a>
+                    <a class="nav-link" href="Tnews.html">Blog</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="careers.html">Careers</a>
