--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                       <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="Tnews.html">News</a>
+                      <a class="nav-link" href="Tnews.html">Blog</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="careers.html">Careers</a>
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-lg-6 p-0">
                 <!-- Map -->
-                <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10784.188505644011!2d19.053119335158936!3d47.48899529453826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1543907528304" style="border:0" allowfullscreen></iframe></div>
+                <div class="map"><iframe src="https://www.google.com/maps" style="border:0" allowfullscreen></iframe></div>
             </div>
             <div class="col-lg-6 p-0">
                 <div class="contact-warp">
