--- a/MusicEDU.html
+++ b/MusicEDU.html
@@ -84,14 +84,14 @@
 <div class="container mrgt2">
         <div class="row">
           <div class="col-lg-10 ftco-animate">
-                <h2 class="mb-3 mrgt1 font-poppinssemibold mrgt2 mrgb1 fs--40">Music Education</h2>
+                <h2 class="mb-3 mrgt1 font-poppinssemibold eduu mrgt2 mrgb1 fs--40">Music Education</h2>
           	<p>
               <img src="assets/images/Playlist/6.jpg" alt="" class="img-fluid">
             </p>
-            <h2 class="mb-3 font-poppinssemibold fs-25">Music Education as a career</h2>
+            <h2 class="mb-3 font-poppinssemibold edu fs-25">Music Education as a career</h2>
             <p class="font-poppinslight fs--16">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
             <p  class="font-poppinslight fs--16">Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-            <h2 class="mb-3 mt-5 font-poppinssemibold fs--25">#2. Creative Music Education</h2>
+            <h2 class="mb-3 mt-5 edu font-poppinssemibold fs--25">#2. Creative Music Education</h2>
             <p class="font-poppinsligh fs--14t">Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
             <p>
               <img src="assets/images/newnews/2.jpg" alt="" class="img-fluid">
